--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,11 @@
 
   <depend>roscpp</depend>
   <depend>rospy</depend>
+  <depend>pcl_ros</depend>
+  <depend>pcl_conversions</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>ddynamic_reconfigure</depend>
 
   <buildtool_depend>catkin</buildtool_depend>
 
