--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,22 @@ services:
       - PYTHONUNBUFFERED=1
       - ROSCONSOLE_STDOUT_LINE_BUFFERED=1
       # Azure Kinect FPS: valid values are 5, 15, 30.
-      - K4A_FPS=${K4A_FPS:-5}
-      - TRACKING_ENABLE=${TRACKING_ENABLE:-false}
+      - K4A_FPS=5
+      - TRACKING_ENABLE=false
+      - HTTP_POSE_PATH=/camera_pose
+      - HTTP_CALIBRATE_PATH=/calibrate
     ports:
       - "5005:5005/udp"
     volumes:
       - /dev:/dev
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
-    command: ["roslaunch", "nn_laser_spot_tracking", "docker_stack.launch", "log_level:=DEBUG", "tracking_enable:=${TRACKING_ENABLE:-false}", "k4a_fps:=${K4A_FPS:-5}", "http_pose_path:=${HTTP_POSE_PATH:-/camera_pose}", "http_calibrate_path:=${HTTP_CALIBRATE_PATH:-/calibrate}"]
+    command:
+      - bash
+      - -lc
+      - >-
+        roslaunch nn_laser_spot_tracking docker_stack.launch
+        log_level:=DEBUG
+        tracking_enable:=$${TRACKING_ENABLE}
+        k4a_fps:=$${K4A_FPS}
+        http_pose_path:=$${HTTP_POSE_PATH}
+        http_calibrate_path:=$${HTTP_CALIBRATE_PATH}
